# fastapi-user

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
docker_compose/: app.dev.yaml  migrate.yaml  storages.yaml
src/: config.py  di.py  main.py  stub.py
src/api/: __init__.py  main.py
src/api/user/: router.py
src/application/common/: dto.py  exceptions.py
src/application/common/exceptions/: __init__.py  base.py
src/application/common/use_cases/: __init__.py  base_user.py
src/application/user/dto/: __init__.py  user.py  user_dto.py
src/application/user/entities/: user.py
src/application/user/exceptions/: __init__.py  user.py
src/application/user/protocols/: __init__.py  hasher_password.py  jwt_service.py  session_service.py
src/application/user/services/: __init__.py  hasher_password.py  jwt_service.py  session_service.py
src/application/user/use_cases/: __init__.py  delete_user.py  get_by_id.py  get_by_session_id.py  get_by_username.py  get_users.py  login.py  logout.py  new_user.py  user_login.py
src/database/migrations/: env.py
src/database/models/: __init__.py  mapping.py  user.py
src/database/models/user/: __init__.py  user.py
src/database/repositories/: user.py
src/di/: di.py  providers.py  stub.py
src/domain/common/entities/: __init__.py  entity.py
src/domain/common/exceptions/: __init__.py
src/domain/user/entities/: user.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: base.py  mapping.py
src/infrastructure/database/repositories/: user.py  user_protocol.py
src/infrastructure/redis/: __init__.py  connection.py
src/infrastructure/redis/repositories/: repository.py
src/main/: config.py  web.py
src/main/di/: di.py  providers.py  stub.py
src/presentation/api/: exceptions.py  routes.py  web.py
src/presentation/api/di/: di.py  providers.py
src/presentation/api/v1/: user.py
tests/mocks/: __init__.py  hasher_password.py  session_service.py  user_repo.py
tests/unit/application/: conftest.py
(+21 files in other folders)
