[tool.poetry]
name = "second-life"
version = "0.1.0"
description = ""
authors = ["slev-v <stasrudometkin2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.10"
pydantic = "^2.4.2"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = { extras = ["postgresql-asyncpg"], version = "^2.0.23" }
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = "^3.3.0"


[tool.poetry.group.test.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
